# e2e-tests

./: .rustfmt.toml  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
e2e/: Cargo.toml
e2e/src/: lib.rs  playwright_ext.rs
e2e/src/tests/: fetch.rs  hello_world1.rs  hello_world2.rs  mod.rs
e2e/tests/: hello_world2.rs
web/src/: main.rs
