[package]
name = "e2e"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playwright = "0.0.18"
tokio = { version = "1.8.1", features = [ "fs" ] }
async-trait = "0.1.50"
futures = "0.3.15"
anyhow = "1.0.42"
pin-project = "1.0.7"