[package]
name = "e2e"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

playwright = "0.0.18"
tokio = "1.8.1"
async-trait = "0.1.50"
futures = "0.3.15"
anyhow = "1.0.42"
pin-project = "1.0.7"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"